@@ -1,1 +1,2 @@
 DIST redmine_git_hosting-0.7.5.tar.gz 506693 SHA256 f48f1c7bccfbb658e6a76fd198289a604ef1956be8a3b82299d3f788d0ad5029 SHA512 8c07910d648bb73028d50c159514a3722a26eca5e04008dc7c24b3c1551e46b8bf353792ad313bf1066e9e21e0a5fc7bc6c7f7209101814f69b1a5059427d150 WHIRLPOOL 76080be57e61aa3ccaf68c72f21e8e55aa63759f44fd274e6a6f1ec42ba7e665d74e2d82c9276b05eaf1b021881a8b4db22d483918d13b28b3de7147a2f1f69b
+DIST redmine_git_hosting-0.7.6.tar.gz 506707 SHA256 01409b09ff76b6a069dbfcf9c8cc1eac4ef3d7ae21bcfd8a22a1a509498d513e SHA512 38a2ecb365a5fb7e5c556081ce74688738e4c32d8db3456b3f4fa567ef09553767855b86243751bf1b1dd6d94e0268f7da93104f3229936afb225ffd2dff37b1 WHIRLPOOL 6fec69757ae36359e66f7e84d4dfab992ffa925e8251cfc6b0cd5bcec5679afa122201ac61c4a57438c37763b74951b3f79eb02f9a4c8b1a7049c467b8b87044
