@@ -1,3 +1,9 @@
+*redmine_git_hosting-0.7.6 (01 Aug 2014)
+
+  01 Aug 2014; Manuel Rüger <mrueg@gentoo.org>
+  +redmine_git_hosting-0.7.6.ebuild:
+  [www-apps/redmine_git_hosting] Version bump.
+
   01 Aug 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.5.ebuild:
   [www-apps/redmine_git_hosting] Add ruby20 support.
 
